[Added]Add check authentication valid api
